--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -5,14 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <ProgressBar
         android:visibility="gone"
         android:id="@+id/progressbar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/framelauout"
         android:layout_marginTop="-7dp"
         android:backgroundTint="@color/colorPrimary"
         android:indeterminate="true"
@@ -25,8 +23,7 @@
         android:layout_height="match_parent">
 
         <ListView
-
-            android:id="@+id/movie_list"
+            android:id="@+id/film_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
