--- a/app/src/main/res/layout/film_detail_activity.xml
+++ b/app/src/main/res/layout/film_detail_activity.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -14,10 +12,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-
-        tools:text="Film Title" />
+        android:text="@string/film_title" />
 
     <TextView
         android:id="@+id/film_detail_opening_crawl"
@@ -26,14 +22,14 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Film Description"
+        android:text="@string/film_description"
          />
 
     <TextView
         android:id="@+id/film_detail_release_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Release date"
+        android:text="@string/release_date"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp" />
